--- a/functions/test-db/json2/digitalparticipation/templates/home.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/home.hbs
@@ -45,10 +45,10 @@
             <hr class="nomargin" />
             <h4>
                 <a href="/the-charter">
-                    <div class="text">
+                    <span class="text">
                         Discover our five charter pledges
-                    </div>
-                    <i class="material-icons">armdc-layout-grid__inner_forward</i>
+                    </span>
+                    <i class="material-icons">arrow_forward</i>
                 </a>
             </h4>
             <hr class="nomargin" />
@@ -57,10 +57,10 @@
             <hr class="nomargin hide-on-small-only" />
             <h4>
                 <a href="/sign-up/form">
-                    <div class="text">
+                    <span class="text">
                         Sign up on-line using our simple form
-                    </div>
-                    <i class="material-icons">armdc-layout-grid__inner_forward</i>
+                    </span>
+                    <i class="material-icons">arrow_forward</i>
                 </a>
             </h4>
             <hr class="nomargin" />
@@ -68,10 +68,10 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-12-phone">
             <h4>
                 <a href="/skill-up">
-                    <div class="text">
+                    <span class="text">
                         Uncover what basic digital skills might mean for your organisation
-                    </div>
-                    <i class="material-icons">armdc-layout-grid__inner_forward</i>
+                    </span>
+                    <i class="material-icons">arrow_forward</i>
                 </a>
             </h4>
             <hr class="nomargin" />
@@ -79,10 +79,10 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-12-phone">
             <h4>
                 <a href="/resources">
-                    <div class="text">
+                    <span class="text">
                         Show your support, and help spread the word
-                    </div>
-                    <i class="material-icons">armdc-layout-grid__inner_forward</i>
+                    </span>
+                    <i class="material-icons">arrow_forward</i>
                 </a>
             </h4>
             <hr class="nomargin" />
