--- a/functions/test-db/json2/digitalparticipation/templates/sign-up.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/sign-up.hbs
@@ -7,6 +7,9 @@
             </p>
             <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Sign-Charter-RGB-04.png" alt="Sign up illustration" class="responsive-img hide-on-med-and-up" />
         </div>
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
+            &nbsp;
+        </div>
         <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-5 mdc-layout-grid__cell-12-phone">
             <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Sign-Charter-RGB-04.png" alt="Sign up illustration" class="responsive-img" />
         </div>
@@ -18,7 +21,10 @@
         </div>
     </div>
     <div class="mdc-layout-grid__inner title">
-        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-5 mdc-layout-grid__cell-12-phone">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
+            &nbsp;
+        </div>
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-4 mdc-layout-grid__cell-12-phone">
             <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Eligibility-RGB-04.png" alt="Eligibility illustration" class="responsive-img" />
         </div>
         <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
