--- a/functions/test-db/json2/digitalparticipation/templates/skill-up-detail.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/skill-up-detail.hbs
@@ -21,7 +21,7 @@
         </div>
     </div>
     <div class="mdc-layout-grid__inner expand detail">
-        <div class="mdc-layout-grid__cell hide-on-small-only m4">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-4">
             {{#compare params.slug "===" "managing-information"}}
             <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/WEB-Skill-Up-(Managing-Info).png" alt="Managing Info illustration" class="responsive-img margin-top" />
             {{else}}
@@ -43,7 +43,10 @@
             {{/compare}}
             {{/compare}}
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 offset-m1 m7">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
+            &nbsp;
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7 mdc-layout-grid__cell--span-12-phone">
             <div class="pull-right expand">
                 <h3>
                     <a href="/skill-up">
