--- a/functions/test-db/json2/digitalparticipation/templates/stories-detail.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/stories-detail.hbs
@@ -13,7 +13,10 @@
             <h3>“Giving people the skills they are expected to have automatically by the welfare system enables them to meet Jobcentre expectations &amp; help avoid the possibility of sanctions, which are having a major impact on people living in poverty”</h3>
             <p>&#8212; <strong><a href="/signatories/cre8te-opportunities-limited">Cre8te Opportunities Limited</a></strong></p>
         </div>
-        <div class="mdc-layout-grid__cell hide-on-small-only offset-m1 m5">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
+            &nbsp;
+        </div>
+        <div class="mdc-layout-grid__cell hide-on-small-only m5">
             <div class="pull-right expand">
                 <h3>
                     <a href="/stories">
@@ -33,7 +36,10 @@
             <h3>“Our frontline staff have the skills and knowledge to weave relevant digital learning elements into the work they are already doing with harder to reach groups”</h3>
             <p>&#8212; <strong><a href="/signatories/glasgow-life">Glasgow Life</a></strong></p>
         </div>
-        <div class="mdc-layout-grid__cell hide-on-small-only offset-m1 m5">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
+            &nbsp;
+        </div>
+        <div class="mdc-layout-grid__cell hide-on-small-only m5">
             <div class="pull-right expand">
                 <h3>
                     <a href="/stories">
@@ -53,7 +59,10 @@
             <h3>“We worked to engage older people with the internet”</h3>
             <p>&#8212; <strong><a href="">Queens Cross Housing Association</a></strong></p>
         </div>
-        <div class="mdc-layout-grid__cell hide-on-small-only offset-m1 m5">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
+            &nbsp;
+        </div>
+        <div class="mdc-layout-grid__cell hide-on-small-only m5">
             <div class="pull-right expand">
                 <h3>
                     <a href="/stories">
