--- a/functions/test-db/json2/digitalparticipation/templates/skill-up.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/skill-up.hbs
@@ -1,6 +1,6 @@
 <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner title">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 m5">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 mdc-layout-grid__cell--span-5">
             <h1>Back The Basics</h1>
             <p>
                 Basic digital skills can mean different things to different folk.
@@ -11,10 +11,13 @@
             </p>
             <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Back-The-Basics-RGB-04.png" alt="Back The Basics illustration" class="responsive-img hide-on-med-and-up" />
         </div>
-        <div class="mdc-layout-grid__cell hide-on-small-only offset-m1 m5">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
+            &nbsp;
+        </div>
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-5">
             <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Back-The-Basics-RGB-04.png" alt="Back The Basics illustration" class="responsive-img" />
         </div>
-        <div class="mdc-layout-grid__cell hide-on-small-only m1">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
             &nbsp;
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -22,22 +25,25 @@
         </div>
     </div>
     <div class="mdc-layout-grid__inner expand skills">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 m6">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-12-phone">
             <h1 id="digital_skills">Digital Skills</h1>
         </div>
-        <div class="mdc-layout-grid__cell hide-on-small-only offset-m2 m4">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-2">
+            &nbsp;
+        </div>
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <hr class="nomargin" />
         </div>
     </div>
     <div class="mdc-layout-grid__inner expand skills">
-        <div class="mdc-layout-grid__cell s2 m1">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-1">
             <h3>
                 <span class="number">1</span>
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell s9 m4">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-9-phone">
             <h3>
                 Managing Info
             </h3>
@@ -49,13 +55,13 @@
                 </a>
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 m6">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-12-phone">
             <p>
                 Think about the ways in which you could improve your skills &amp;
                 capabilities to find, manage and store digital information.
             </p>
         </div>
-        <div class="mdc-layout-grid__cell hide-on-small-only m1">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
             <h3>
                 <a href="skill-up/managing-information">
                     <i class="fa fa-plus-circle" aria-hidden="true"></i>
@@ -67,12 +73,12 @@
         </div>
     </div>
     <div class="mdc-layout-grid__inner expand skills">
-        <div class="mdc-layout-grid__cell s2 m1">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-1">
             <h3>
                 <span class="number">2</span>
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell s9 m4">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-9-phone">
             <h3>
                 Communicating
             </h3>
@@ -84,13 +90,13 @@
                 </a>
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 m6">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-12-phone">
             <p>
                 Look at improvements to the ways in which you communicate,
                 interact, collaborate and connect with others.
             </p>
         </div>
-        <div class="mdc-layout-grid__cell hide-on-small-only m1">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
             <h3>
                 <a href="skill-up/communicating">
                     <i class="fa fa-plus-circle" aria-hidden="true"></i>
@@ -102,12 +108,12 @@
         </div>
     </div>
     <div class="mdc-layout-grid__inner expand skills">
-        <div class="mdc-layout-grid__cell s2 m1">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-1">
             <h3>
                 <span class="number">3</span>
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell s9 m4">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-9-phone">
             <h3>
                 Transacting
             </h3>
@@ -119,13 +125,13 @@
                 </a>
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 m6">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-12-phone">
             <p>
                 How might you better sell &amp; purchase goods, organise
                 finances and make use of digital government services.
             </p>
         </div>
-        <div class="mdc-layout-grid__cell hide-on-small-only m1">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
             <h3>
                 <a href="skill-up/transacting">
                     <i class="fa fa-plus-circle" aria-hidden="true"></i>
@@ -137,12 +143,12 @@
         </div>
     </div>
     <div class="mdc-layout-grid__inner expand skills">
-        <div class="mdc-layout-grid__cell s2 m1">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-1">
             <h3>
                 <span class="number">4</span>
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell s9 m4">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-9-phone">
             <h3>
                 Problem Solving
             </h3>
@@ -154,13 +160,13 @@
                 </a>
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 m6">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-12-phone">
             <p>
                 Uncover new ways to use digital tools to solve problems and
                 find solutions - increasing independence and confidence
             </p>
         </div>
-        <div class="mdc-layout-grid__cell hide-on-small-only m1">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
             <h3>
                 <a href="skill-up/problem-solving">
                     <i class="fa fa-plus-circle" aria-hidden="true"></i>
@@ -172,12 +178,12 @@
         </div>
     </div>
     <div class="mdc-layout-grid__inner expand skills">
-        <div class="mdc-layout-grid__cell s2 m1">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-1">
             <h3>
                 <span class="number">5</span>
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell s9 m4">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-9-phone">
             <h3>
                 Creating
             </h3>
@@ -189,13 +195,13 @@
                 </a>
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 m6">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-12-phone">
             <p>
                 Discover new and improved ways to make connections and engage
                 with people through the creation of digital content.
             </p>
         </div>
-        <div class="mdc-layout-grid__cell hide-on-small-only m1">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
             <h3>
                 <a href="skill-up/creating">
                     <i class="fa fa-plus-circle" aria-hidden="true"></i>
@@ -208,13 +214,13 @@
     </div>
 
     <div class="mdc-layout-grid__inner title">
-        <div class="mdc-layout-grid__cell hide-on-small-only m5">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-5">
             <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Why-It-Matters-RGB-04.png" alt="Why It Matters? illustration" class="responsive-img" />
         </div>
-        <div class="mdc-layout-grid__cell hide-on-small-only m1">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
             &nbsp;
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 m6">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-12-phone">
             <h1>Why It Matters?</h1>
             <p>
                 Across Scotland, around 800,000 adults don’t have the basic digital skills they need to use the internet effectively. If this were just a case of missing out on a few distracting websites and celebrity tweets then we might think nothing more of it. But the stakes are so much higher. Amongst other things, the internet helps people keep in touch, learn new things, save money, find work and stay healthy. For some people it’s been a genuine life saver. These things matter to everyone, and they should be for everyone.
