--- a/functions/test-db/json2/digitalparticipation/templates/the-charter.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/the-charter.hbs
@@ -12,7 +12,7 @@
         <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-5-desktop">
             <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Skill-Up-Scotland-RGB-04.png" alt="Skill Up Scotland illustration" class="responsive-img" />
         </div>
-        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-desktop">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
             &nbsp;
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -26,22 +26,22 @@
         <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-5-desktop">
             <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Pledges-RGB-04.png" alt="Our Pledges illustration" class="responsive-img" />
         </div>
-        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-desktop2">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-12">
             <hr class="nomargin" />
         </div>
     </div>
     <div class="mdc-layout-grid__inner expand pledge">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2 mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1">
             <h3>
                 <span class="number">1</span>
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-10 mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-10-phone">
             <h3>
                 Skill Up
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-7-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7 mdc-layout-grid__cell--span-12-phone">
             <p>
                 We ensure that our staff &amp; volunteers have the opportunity
                 to develop basic digital skills.
@@ -52,17 +52,17 @@
         </div>
     </div>
     <div class="mdc-layout-grid__inner expand pledge">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2 mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1">
             <h3>
                 <span class="number">2</span>
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-10 mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-10-phone">
             <h3>
                 Support Staff
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-7-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7 mdc-layout-grid__cell--span-12-phone">
             <p>
                 We support our staff &amp; volunteers to help others learn basic
                 digital skills and embrace digital tools.
@@ -73,17 +73,17 @@
         </div>
     </div>
     <div class="mdc-layout-grid__inner expand pledge">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2 mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1">
             <h3>
                 <span class="number">3</span>
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-10 mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-10-phone">
             <h3>
                 Support Scotland
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-7-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7 mdc-layout-grid__cell--span-12-phone">
             <p>
                 We support our nation by contributing resources and practical
                 support for Scotland in whatever ways we can.
@@ -94,17 +94,17 @@
         </div>
     </div>
     <div class="mdc-layout-grid__inner expand pledge">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2 mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1">
             <h3>
                 <span class="number">4</span>
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-10 mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-10-phone">
             <h3>
                 Back to Basics
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-7-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7 mdc-layout-grid__cell--span-12-phone">
             <p>
                 We support a common language based on digital participation and
                 basic digital skills to make our thinking and actions as clear
@@ -116,17 +116,17 @@
         </div>
     </div>
     <div class="mdc-layout-grid__inner expand pledge">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2 mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1">
             <h3>
                 <span class="number">5</span>
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-10 mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-10-phone">
             <h3>
                 Come Together
             </h3>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-7-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7 mdc-layout-grid__cell--span-12-phone">
             <p>
                 We channel our efforts through the Digital Participation
                 programme so that our activities are coordinated and build on
