Improving the charter search

--- a/functions/test-db/json2/digitalparticipation/digitalparticipation-styles.scss
+++ b/functions/test-db/json2/digitalparticipation/digitalparticipation-styles.scss
@@ -1455,6 +1455,16 @@ hr {
 }
 
 .signatories main {
+    h1 {
+        font-size: 5.8rem;
+        line-height: 5.9rem;
+        letter-spacing: -.1rem;
+        margin: 2rem 0 2rem;
+        padding-right: 2rem;
+        .small {
+            font-size: 4rem;
+        }
+    }
     .signatory {
         background: white;
         // margin: 0 -0.75rem;
