--- a/functions/test-db/json2/digitalparticipation/templates/signatory-search.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/signatory-search.hbs
@@ -1,23 +1,52 @@
 <div class="signatories">
-    <h1>Signatories</h1>
+    <h1>Signatories <span class="small">({{supplimentaryResponses.total.hits.total}})</span></h1>
 
     <form [searchroute]="'signatory_search'">
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
-                <div class="mdc-layout-grid__cell-span-6">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+                    <h4>Search</h4>
                     <div class="mdc-textfield mdc-textfield--upgraded" data-mdc-auto-init="MDCTextField">
-                        <input type="text" class="mdc-textfield__input" name="q" id="events-keywords" value="{{params.query.q}}">
-                        <label class="mdc-textfield__label" for="events-keywords">Keywords</label>
+                        <input type="text" class="mdc-textfield__input" name="q" id="charter-keywords" value="{{params.query.q}}">
+                        <label class="mdc-textfield__label" for="charter-keywords">Keywords</label>
                         <div class="mdc-textfield__bottom-line"></div>
                     </div>
                 </div>
-                <div class="mdc-layout-grid__cell-span-6">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
+                    <h4>Sector</h4>
                     <div class="mdc-form-field">
-                        <select class="mdc-select" role="listbox" id="events-type" name="course_type">
-                            <option value="" {{#if params.query.type}}{{else}}selected{{/if}}>Select type</option>
-                            {{#each supplimentaryResponses.types.aggregations.types.buckets}}
-                            <option value="{{key}}" {{#compare ../params.query.type "===" key}}selected{{/compare}}>{{key}} ({{doc_count}})</option>
+                        <select class="mdc-select" role="listbox" id="charter-sector" name="sector">
+                            <option value="" {{#if params.query.sector}}{{else}}selected{{/if}}>All sectors</option>
+                            {{#each supplimentaryResponses.types.aggregations.sectors.buckets}}
+                            <option value="{{key}}" {{#compare ../params.query.sector "===" key}}selected{{/compare}}>{{key}} ({{doc_count}})</option>
                             {{/each}}
+                        </select>
+                    </div>
+                </div>
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
+                    <h4>Category</h4>
+                    <div class="mdc-form-field">
+                        <select class="mdc-select" role="listbox" id="charter-category" name="category">
+                            <option value="" {{#if params.query.category}}{{else}}selected{{/if}}>All categories</option>
+                            {{#each supplimentaryResponses.types.aggregations.categories.buckets}}
+                            <option value="{{key}}" {{#compare ../params.query.category "===" key}}selected{{/compare}}>{{key}} ({{doc_count}})</option>
+                            {{/each}}
+                        </select>
+                    </div>
+                </div>
+            </div>
+            <div class="mdc-layout-grid__inner">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
+                    <h4>Total signatories found: {{primaryResponse.hits.total}}</h4>
+                </div>
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1">
+                    <h4>Sort</h4>
+                </div>
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
+                    <div class="mdc-form-field">
+                        <select class="mdc-select" role="listbox" id="charter-sort" name="sort">
+                            <option value="" {{#if params.query.sort}}{{else}}selected{{/if}}>Date signed</option>
+                            <option value="AZ" {{#if params.query.sort}}selected{{else}}{{/if}}>Alphabetical</option>
                         </select>
                     </div>
                 </div>
