--- a/functions/test-db/json2/digitalparticipation/templates/the-charter.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/the-charter.hbs
@@ -1,6 +1,6 @@
 <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner title">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-12-phone">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-12-phone">
             <h1>Skill Up Scotland</h1>
             <p>
                 When you sign Scotland's Digital Participation Charter, we ask you
@@ -9,7 +9,7 @@
             </p>
             <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Skill-Up-Scotland-RGB-04.png" alt="Skill Up Scotland illustration" class="responsive-img hide-on-med-and-up" />
         </div>
-        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-5-desktop">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-5 mdc-layout-grid__cell--span-12-phone">
             <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Skill-Up-Scotland-RGB-04.png" alt="Skill Up Scotland illustration" class="responsive-img" />
         </div>
         <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
@@ -20,10 +20,10 @@
         </div>
     </div>
     <div class="mdc-layout-grid__inner description pledges">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-6-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-12-phone">
             <h1 class="align-bottom">Our Pledges</h1>
         </div>
-        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-5-desktop">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-3-desktop">
             <img src="https://storage.cloud.google.com/digitalparticipation/images/illustrations/Pledges-RGB-04.png" alt="Our Pledges illustration" class="responsive-img" />
         </div>
         <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-12">
