--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -155,7 +155,9 @@ main {
     overflow: -webkit-paged-x;
     padding: $spacing-unit/2;
 }
-
+:focus {
+    outline: none;
+}
 .brand-logo {
     margin-left: -$spacing-unit/2;
     img {
