--- a/functions/test-db/json2/digitalparticipation/templates/home.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/home.hbs
@@ -40,8 +40,8 @@
             </a>
         </div>
     </div>
-    <div class="mdc-layout-grid__inner expand">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-12-phone">
+    <div class="mdc-layout-grid__inner expand cta">
+        <div class="mdc-layout-grid__cell cta-left mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-12-phone">
             <hr class="nomargin" />
             <h4>
                 <a href="/the-charter">
@@ -53,7 +53,7 @@
             </h4>
             <hr class="nomargin" />
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-12-phone">
+        <div class="mdc-layout-grid__cell cta-right mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-12-phone">
             <hr class="nomargin hide-on-small-only" />
             <h4>
                 <a href="/sign-up/form">
@@ -65,7 +65,7 @@
             </h4>
             <hr class="nomargin" />
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-12-phone">
+        <div class="mdc-layout-grid__cell cta-left mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-12-phone">
             <h4>
                 <a href="/skill-up">
                     <span class="text">
@@ -76,7 +76,7 @@
             </h4>
             <hr class="nomargin" />
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-12-phone">
+        <div class="mdc-layout-grid__cell cta-right mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-12-phone">
             <h4>
                 <a href="/resources">
                     <span class="text">
