--- a/functions/test-db/json2/digitalparticipation/templates/signatory-search.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/signatory-search.hbs
@@ -7,7 +7,7 @@
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
                     <h4>Search</h4>
                     <div class="mdc-textfield mdc-textfield--upgraded keywords" data-mdc-auto-init="MDCTextField">
-                        <input type="text" class="mdc-textfield__input" name="q" id="charter-keywords" value="{{params.query.q}}">
+                        <input type="text" class="mdc-textfield__input" name="q" id="charter-keywords" value="{{params.query.q}}" placeholder="Search for a charter signatory">
                         <div class="mdc-textfield__bottom-line"></div>
                     </div>
                 </div>
@@ -39,7 +39,7 @@
                     <h4>Total signatories found: {{primaryResponse.hits.total}}</h4>
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1">
-                    <h4>Sort</h4>
+                    <h4 class="sort">Sort</h4>
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
                     <div class="mdc-form-field sort">
@@ -59,8 +59,8 @@
     <div class="mdc-layout-grid signatories-search">
         <div class="mdc-layout-grid__inner">
             {{#each primaryResponse.hits.hits}}
-            <div class="mdc-layout-grid__cell signatory inner mdc-layout-grid__cell--span-3">
-                {{{_source.rendered.search_result_logo}}}
+            <div class="mdc-layout-grid__cell signatory inner mdc-layout-grid__cell--span-3 mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-phone">
+                {{{_source.rendered.charter_search_result}}}
             </div>
             {{/each}}
         </div>
