--- a/functions/test-db/json2/digitalparticipation/templates/signatory.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/signatory.hbs
@@ -1,7 +1,1 @@
-<div class="mdc-layout-grid">
-    <div class="mdc-layout-grid__inner title">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            {{{primaryResponse.hits.hits.[0]._source.rendered.full}}}
-        </div>
-    </div>
-</div>
+{{{primaryResponse.hits.hits.[0]._source.rendered.charter_full}}}
