--- a/functions/test-db/json2/scvo/templates/scvo.hbs
+++ b/functions/test-db/json2/scvo/templates/scvo.hbs
@@ -77,7 +77,7 @@
                 </div>
             </header>
 
-            <aside class="mdc-temporary-drawer" id="menu_draw" dir="rtl">
+            <aside class="mdc-temporary-drawer" id="menu_drawer" dir="rtl">
                 <nav class="mdc-temporary-drawer__drawer">
                     <header class="mdc-temporary-drawer__header">
                         <div class="mdc-temporary-drawer__header-content mdc-theme--primary-bg mdc-theme--text-primary-on-primary">
@@ -172,6 +172,7 @@
         </div>
     </scvo-site>
     <script type="text/javascript" src="//unpkg.com/material-components-web@latest/dist/material-components-web.js"></script>
+    <script type="text/javascript" src="//npmcdn.com/headroom.js/dist/headroom.min.js"></script>
     <script type="text/javascript">
     // Cookie Consent
     window.cookieconsent_options = {
