--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -220,17 +220,37 @@ a:hover {
         }
     }
     .featured-content {
-        .featured.mdc-card {
-            height: 20rem;
+        .featured {
+            h1,
+            p {
+                font-size: 1.1rem;
+                color: black;
+            }
+            h1.header-text {
+                font-size: 1.3rem;
+                line-height: 1.5rem;
+                margin: 0;
+            }
+        }
+        .featured-text,
+        .featured-background-image {
+            padding: $spacing-unit*2 0;
+        }
+        .featured-background-image {
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center center;
-            .mdc-card__primary, .mdc-card__actions {
-                background-image: linear-gradient(90deg, var(--mdc-theme-primary-dark) 0%, var(--mdc-theme-primary) 33%, var(--mdc-theme-primary-fade) 100%);
+            p {
+                font-size: 1.4rem;
+                margin-left: 3rem;
+            }
+            h1,
+            p,
+            a {
                 color: white;
             }
-            .mdc-button:not(:disabled) {
-                color: white;
+            img.header-text {
+                max-width: 100%;
             }
         }
     }
@@ -244,7 +264,7 @@ a:hover {
         h2 {
             font-size: 1.8rem;
         }
-        .mdc-layout-grid__cell--span-4-desktop {
+        .mdc-layout-grid__cell--span-4 {
             text-align: center;
             h3 {
                 margin: 0;
