Home featured content styling

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -231,6 +231,16 @@ a:hover {
                 line-height: 1.5rem;
                 margin: 0;
             }
+            .photo-wee {
+                max-width: 96px;
+                margin-right: 1.5rem;
+            }
+            .post-info .photo-wee {
+                display: none;
+            }
+            .post-info {
+                padding-bottom: $spacing-unit/2;
+            }
         }
         .featured-text,
         .featured-background-image {
@@ -242,7 +252,6 @@ a:hover {
             background-position: center center;
             p {
                 font-size: 1.4rem;
-                margin-left: 3rem;
             }
             h1,
             p,
@@ -250,6 +259,7 @@ a:hover {
                 color: white;
             }
             img.header-text {
+                margin-right: 3rem;
                 max-width: 100%;
             }
         }
